--- a/style.css
+++ b/style.css
@@ -8,25 +8,29 @@ body {
 header {
     background-color: #f4f4f4;
     padding: 1rem;
-}
-
-nav ul {
-    list-style: none;
-    padding: 0;
-}
-
-nav ul li {
-    display: inline;
-    margin-right: 1rem;
-}
-
-nav ul li a {
-    text-decoration: none;
-    color: #333;
+    text-align: center;
 }
 
 main {
     padding: 2rem;
+}
+
+h1, h2 {
+    color: #333;
+}
+
+ul {
+    list-style: none;
+    padding: 0;
+}
+
+li a {
+    color: #007bff;
+    text-decoration: none;
+}
+
+li a:hover {
+    text-decoration: underline;
 }
 
 footer {
